@@ -50,7 +50,6 @@ NOTE: sorry, this is very raw :)
  - printing : skip series of empty measures ?
  - very short song (a few measures) : nothing printed [can't reproduce anymore]
 
- ** hear note/drum by clicking on its name in left part
  ** add new tools, that allow adding notes without dragging (and resizing without keyboard, and selecting, and...?) ?
  ** Keyboard editor : show current key in left area
  
